syntax = "proto3";
option go_package = "net";

// 内网服务器注册到中心服务器
message leaf_register_req{
    string name = 1;
}

message leaf_register_resp{
    string msg = 1;
    uint32 ID  = 2;
}

// 控制台连接内网服务器
message cli_auth_req{
    string password = 1;
}

message cli_auth_resp{
    string msg = 1;
    uint32 ID  = 2;
}

// 控制台命令到中心服务器
message cli_command_req{
    string cmd = 1; // list, select,
}

message cli_command_resp{
    string ret = 2;
}

// 心跳
message heartbeat{}


// 创建隧道
message create_tunnel_req{
    uint32 leafID = 1;
    string address   = 2;
}

message create_tunnel_resp{
    string msg      = 1;
    string tunnelID = 2;
}

// 创建隧道
message close_tunnel_req{
    uint32 leafID = 1;
}

message close_tunnel_resp{
    string msg      = 1;
}

// 隧道消息
message tunnel_message_req{
    bool   close = 1;
    uint32 connID = 2;
    string tunID = 3;
    bytes  data  = 4;
}

message tunnel_message_resp{
    string msg = 1;
}